feat: 산책 상태 UI 추가

--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -25,16 +25,107 @@
             android:layout_height="match_parent"
             android:clickable="true"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+            tools:layout_editor_absoluteY="0dp">
+
+            <ImageButton
+                android:id="@+id/btn_woof_back"
+                style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/rect_coral400_fill_12"
+                android:elevation="10dp"
+                android:gravity="center"
+                android:onClick="@{() -> actionHandler.clickBackBtn()}"
+                android:src="@drawable/ic_arrow_left_white"
+                android:visibility="invisible" />
+        </com.naver.maps.map.MapView>
+
+        <TextView
+            android:id="@+id/tv_woof_status_all"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rect_white_fill_30"
+            android:backgroundTint="@color/coral50"
+            android:elevation="4dp"
+            android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickStatusAll()}"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="8dp"
+            android:text="@string/woof_status_all"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_woof_status_before"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rect_white_fill_30"
+            android:drawablePadding="6dp"
+            android:elevation="4dp"
+            android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickStatusBefore()}"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="8dp"
+            android:text="@string/woof_status_before"
+            app:drawableStartCompat="@drawable/ic_marker_before"
+            app:layout_constraintStart_toEndOf="@id/tv_woof_status_all"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_woof_status_ongoing"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Coral500.Size14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rect_white_fill_30"
+            android:drawablePadding="6dp"
+            android:elevation="4dp"
+            android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickStatusOnGoing()}"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="8dp"
+            android:text="@string/woof_status_ongoing"
+            app:drawableStartCompat="@drawable/ic_marker_ongoing"
+            app:layout_constraintStart_toEndOf="@id/tv_woof_status_before"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_woof_status_after"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Gray06.Size14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rect_white_fill_30"
+            android:drawablePadding="6dp"
+            android:elevation="4dp"
+            android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickStatusAfter()}"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="8dp"
+            android:text="@string/woof_status_after"
+            app:drawableStartCompat="@drawable/ic_marker_after"
+            app:layout_constraintStart_toEndOf="@id/tv_woof_status_ongoing"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/btn_woof_footprint_refresh"
             style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="14dp"
             android:background="@drawable/rect_white_fill_30"
             android:drawablePadding="8dp"
+            android:elevation="4dp"
             android:gravity="center"
             android:onClick="@{() -> actionHandler.clickRefreshBtn()}"
             android:paddingHorizontal="16dp"
@@ -44,31 +135,17 @@
             app:drawableStartCompat="@drawable/ic_refresh"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/btn_woof_back"
-            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/rect_coral400_fill_12"
-            android:gravity="center"
-            android:onClick="@{() -> actionHandler.clickBackBtn()}"
-            android:src="@drawable/ic_arrow_left_white"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tv_woof_status_before" />
 
         <ImageButton
             android:id="@+id/btn_woof_close"
             style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
             android:layout_width="46dp"
             android:layout_height="46dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="12dp"
             android:background="@drawable/rect_coral400_fill_12"
+            android:elevation="10dp"
             android:gravity="center"
             android:onClick="@{() -> actionHandler.clickCloseBtn()}"
             android:src="@drawable/ic_close_white"
@@ -80,7 +157,7 @@
             android:id="@+id/layout_woof_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="32dp"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
@@ -98,7 +175,7 @@
             android:id="@+id/btn_woof_location"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="32dp"
             android:onClick="@{() -> actionHandler.clickLocationBtn()}"
             app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
