--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -71,6 +71,7 @@
         <item name="android:textColor">@color/gray700</item>
     </style>
 
+
     <style name="Theme.AppCompat.TextView.SemiBold.Gray08.Size24" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textSize">24dp</item>
         <item name="android:includeFontPadding">false</item>
@@ -253,6 +254,19 @@
         <item name="fontFamily">@font/noto_sans_kr_medium</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.Medium.Black.Size22" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_medium</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.Medium.Orange.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral500</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_medium</item>
+    </style>
 
     <!-- Regular -->
     <style name="Theme.AppCompat.TextView.Regular.Black.Size14" parent="@style/Widget.AppCompat.TextView">
