--- a/android/app/src/main/res/layout/fragment_my_page.xml
+++ b/android/app/src/main/res/layout/fragment_my_page.xml
@@ -122,6 +122,16 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+                <include
+                    layout="@layout/include_skeleton_user_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="@{vm.uiState.myPageSkeleton.userProfile == true ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:visibility="gone" />
+
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout_pet_profile"
                     android:layout_width="0dp"
@@ -143,6 +153,18 @@
                         android:text="@string/pets_profile"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <include
+                        layout="@layout/include_skeleton_pet_profile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        android:visibility="@{vm.uiState.myPageSkeleton.petProfile == true ? View.VISIBLE : View.GONE}"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_pet_profile_title"
+                        tools:visibility="gone" />
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/vp_pet_profile"
