refactor: 강아지 선택 ui 개선

--- a/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_dog_selector.xml
@@ -10,6 +10,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
         style="@style/Widget.Material3.BottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,7 +40,7 @@
 
         <TextView
             android:id="@+id/tv_select_dog_title"
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
+            style="@style/Theme.AppCompat.TextView.Medium.Black.Size18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -49,7 +50,7 @@
 
         <TextView
             android:id="@+id/tv_select_dog_content"
-            style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size14"
+            style="@style/Theme.AppCompat.TextView.Medium.Orange.Size14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -75,11 +76,11 @@
             android:layout_height="56dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="24dp"
-            android:background="@drawable/rect_coral04_fill_16"
+            app:validButtonBackground="@{vm.validCommit}"
             android:text="@string/club_select_commit"
             onSingleClick="@{()->vm.submitDogs()}"
-            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
-            android:backgroundTint="@color/coral400"
+            android:background="@drawable/rect_coral04_fill_8"
+            app:validButtonStyle="@{vm.validCommit}"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/vp_club_select_dog_list" />
