--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -225,7 +225,7 @@
             <TextView
                 android:id="@+id/tv_woof_walk_status"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size20"
-                myWalkStatus="@{vm.myFootprint.walkStatus}"
+                myWalkStatus="@{vm.myFootprintMarker.walkStatus}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="10dp"
@@ -384,7 +384,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
-                android:text="@{vm.registerAddress}"
+                android:text="@{vm.addressLine}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walk_area"
                 tools:text="서울 송파구 올림픽로35다길 42" />
