feat: 펫 등록 로직 구현

--- a/android/app/src/main/res/layout/fragment_my_club.xml
+++ b/android/app/src/main/res/layout/fragment_my_club.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ui.club.my.club.MyClubFragment">
+        tools:context=".presentation.ui.club.my.participating.MyParticipatingFragment">
         <include
             android:id="@+id/include_club_list"
             layout="@layout/include_club_list_content"
