--- a/android/app/src/main/res/layout/activity_club_add.xml
+++ b/android/app/src/main/res/layout/activity_club_add.xml
@@ -16,36 +16,12 @@
         android:paddingHorizontal="10dp"
         tools:context=".presentation.ui.club.add.ClubAddActivity">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:contentInsetStart="0dp"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageButton
-                android:id="@+id/iv_club_add_back_button"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="start"
-                android:layout_marginStart="6dp"
-                android:background="@color/transparent"
-                android:onClick="@{()->vm.cancelAddClub()}"
-                android:src="@drawable/ic_close" />
-
-
-            <TextView
-                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/club_list_add_title" />
-
-        </com.google.android.material.appbar.MaterialToolbar>
-
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_club_add"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="10dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <ProgressBar
             android:id="@+id/progressbar_add_club"
@@ -101,5 +77,31 @@
             tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             tools:text="다음"
             tools:textColor="@color/white" />
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/iv_club_add_back_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="start"
+                android:layout_marginStart="6dp"
+                android:background="@color/transparent"
+                android:onClick="@{()->vm.cancelAddClub()}"
+                android:src="@drawable/ic_close" />
+
+
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/club_list_add_title" />
+
+        </com.google.android.material.appbar.MaterialToolbar>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
