--- a/android/app/src/main/res/layout/activity_other_profile.xml
+++ b/android/app/src/main/res/layout/activity_other_profile.xml
@@ -124,6 +124,15 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <include
+                    layout="@layout/include_skeleton_user_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="@{vm.uiState.otherProfileSkeleton.userProfile == true ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:visibility="gone" />
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout_pet_profile"
@@ -146,6 +155,7 @@
                         android:text="@string/pets_profile"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/vp_pet_profile"
@@ -199,6 +209,17 @@
                         app:layout_constraintEnd_toEndOf="@+id/iv_empty_pet"
                         app:layout_constraintStart_toStartOf="@+id/iv_empty_pet"
                         app:layout_constraintTop_toBottomOf="@+id/iv_empty_pet" />
+
+                    <include
+                        layout="@layout/include_skeleton_pet_profile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp"
+                        android:visibility="@{vm.uiState.otherProfileSkeleton.petProfile == true ? View.VISIBLE : View.GONE}"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_pet_profile_title"
+                        tools:visibility="gone" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
